abstract_parser_tree/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> segment
Rule 2     program -> <empty>
Rule 3     segment -> group segment
Rule 4     segment -> group
Rule 5     line -> expression ;
Rule 6     line -> ;
Rule 7     block -> { segment }
Rule 8     for -> FOR ID = range group
Rule 9     range -> arithmetic_expression : arithmetic_expression
Rule 10    while -> WHILE ( logical_expression ) group
Rule 11    if -> IF ( logical_expression ) group
Rule 12    if -> IF ( logical_expression ) group ELSE group
Rule 13    group -> if
Rule 14    group -> while
Rule 15    group -> for
Rule 16    group -> line
Rule 17    group -> block
Rule 18    single_value -> ID
Rule 19    single_value -> FLOAT
Rule 20    single_value -> INT
Rule 21    single_value -> STRING
Rule 22    single_value -> matrix_definition
Rule 23    select_element -> matrix_definition matrix_row
Rule 24    select_element -> ID matrix_row
Rule 25    select_element -> ( arithmetic_expression ) matrix_row
Rule 26    matrix_definition -> [ matrix_definition_inside ]
Rule 27    matrix_definition -> matrix_gen_func
Rule 28    matrix_definition_inside -> matrix_row , matrix_definition_inside
Rule 29    matrix_definition_inside -> matrix_row
Rule 30    matrix_row -> [ vector ]
Rule 31    vector -> arithmetic_expression , vector
Rule 32    vector -> arithmetic_expression
Rule 33    matrix_gen_func -> func_name ( arithmetic_expression )
Rule 34    func_name -> EYE
Rule 35    func_name -> ONES
Rule 36    func_name -> ZEROS
Rule 37    arithmetic_expression -> arithmetic_expression + arithmetic_expression
Rule 38    arithmetic_expression -> arithmetic_expression - arithmetic_expression
Rule 39    arithmetic_expression -> arithmetic_expression * arithmetic_expression
Rule 40    arithmetic_expression -> arithmetic_expression / arithmetic_expression
Rule 41    arithmetic_expression -> arithmetic_expression MTX_SUM arithmetic_expression
Rule 42    arithmetic_expression -> arithmetic_expression MTX_DIFFERENCE arithmetic_expression
Rule 43    arithmetic_expression -> arithmetic_expression MTX_PRODUCT arithmetic_expression
Rule 44    arithmetic_expression -> arithmetic_expression MTX_QUOTIENT arithmetic_expression
Rule 45    arithmetic_expression -> single_value
Rule 46    arithmetic_expression -> arithmetic_expression TRANSPOSE
Rule 47    arithmetic_expression -> - arithmetic_expression
Rule 48    arithmetic_expression -> ( arithmetic_expression )
Rule 49    expression -> assignment
Rule 50    expression -> print
Rule 51    expression -> return
Rule 52    expression -> BREAK
Rule 53    expression -> CONT
Rule 54    logical_expression -> arithmetic_expression comparison_operator arithmetic_expression
Rule 55    comparison_operator -> <
Rule 56    comparison_operator -> >
Rule 57    comparison_operator -> EQUAL
Rule 58    comparison_operator -> NOT_EQUAL
Rule 59    comparison_operator -> SMALLER_OR_EQUAL
Rule 60    comparison_operator -> LARGER_OR_EQUAL
Rule 61    assignment_operator -> =
Rule 62    assignment_operator -> ADD
Rule 63    assignment_operator -> SUBTRACT
Rule 64    assignment_operator -> MULTIPLY
Rule 65    assignment_operator -> DIVIDE
Rule 66    assignment -> ID assignment_operator arithmetic_expression
Rule 67    assignment -> select_element assignment_operator arithmetic_expression
Rule 68    assignment -> select_element assignment_operator matrix_row
Rule 69    print -> PRINT vector
Rule 70    return -> RETURN arithmetic_expression
Rule 71    return -> RETURN

Terminals, with rules where they appear

(                    : 10 11 12 25 33 48
)                    : 10 11 12 25 33 48
*                    : 39
+                    : 37
,                    : 28 31
-                    : 38 47
/                    : 40
:                    : 9
;                    : 5 6
<                    : 55
=                    : 8 61
>                    : 56
ADD                  : 62
BREAK                : 52
CONT                 : 53
DIVIDE               : 65
ELSE                 : 12
EQUAL                : 57
EYE                  : 34
FLOAT                : 19
FOR                  : 8
ID                   : 8 18 24 66
IF                   : 11 12
INT                  : 20
LARGER_OR_EQUAL      : 60
MTX_DIFFERENCE       : 42
MTX_PRODUCT          : 43
MTX_QUOTIENT         : 44
MTX_SUM              : 41
MULTIPLY             : 64
NOT_EQUAL            : 58
ONES                 : 35
PRINT                : 69
RETURN               : 70 71
SMALLER_OR_EQUAL     : 59
STRING               : 21
SUBTRACT             : 63
TRANSPOSE            : 46
WHILE                : 10
ZEROS                : 36
[                    : 26 30
]                    : 26 30
error                : 
{                    : 7
}                    : 7

Nonterminals, with rules where they appear

arithmetic_expression : 9 9 25 31 32 33 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 46 47 48 54 54 66 67 70
assignment           : 49
assignment_operator  : 66 67 68
block                : 17
comparison_operator  : 54
expression           : 5
for                  : 15
func_name            : 33
group                : 3 4 8 10 11 12 12
if                   : 13
line                 : 16
logical_expression   : 10 11 12
matrix_definition    : 22 23
matrix_definition_inside : 26 28
matrix_gen_func      : 27
matrix_row           : 23 24 25 28 29 68
print                : 50
program              : 0
range                : 8
return               : 51
segment              : 1 3 7
select_element       : 67 68
single_value         : 45
vector               : 30 31 69
while                : 14

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . segment
    (2) program -> .
    (3) segment -> . group segment
    (4) segment -> . group
    (13) group -> . if
    (14) group -> . while
    (15) group -> . for
    (16) group -> . line
    (17) group -> . block
    (11) if -> . IF ( logical_expression ) group
    (12) if -> . IF ( logical_expression ) group ELSE group
    (10) while -> . WHILE ( logical_expression ) group
    (8) for -> . FOR ID = range group
    (5) line -> . expression ;
    (6) line -> . ;
    (7) block -> . { segment }
    (49) expression -> . assignment
    (50) expression -> . print
    (51) expression -> . return
    (52) expression -> . BREAK
    (53) expression -> . CONT
    (66) assignment -> . ID assignment_operator arithmetic_expression
    (67) assignment -> . select_element assignment_operator arithmetic_expression
    (68) assignment -> . select_element assignment_operator matrix_row
    (69) print -> . PRINT vector
    (70) return -> . RETURN arithmetic_expression
    (71) return -> . RETURN
    (23) select_element -> . matrix_definition matrix_row
    (24) select_element -> . ID matrix_row
    (25) select_element -> . ( arithmetic_expression ) matrix_row
    (26) matrix_definition -> . [ matrix_definition_inside ]
    (27) matrix_definition -> . matrix_gen_func
    (33) matrix_gen_func -> . func_name ( arithmetic_expression )
    (34) func_name -> . EYE
    (35) func_name -> . ONES
    (36) func_name -> . ZEROS

    $end            reduce using rule 2 (program -> .)
    IF              shift and go to state 9
    WHILE           shift and go to state 11
    FOR             shift and go to state 12
    ;               shift and go to state 15
    {               shift and go to state 16
    BREAK           shift and go to state 20
    CONT            shift and go to state 21
    ID              shift and go to state 13
    PRINT           shift and go to state 23
    RETURN          shift and go to state 24
    (               shift and go to state 10
    [               shift and go to state 26
    EYE             shift and go to state 29
    ONES            shift and go to state 30
    ZEROS           shift and go to state 31

    program                        shift and go to state 1
    segment                        shift and go to state 2
    group                          shift and go to state 3
    if                             shift and go to state 4
    while                          shift and go to state 5
    for                            shift and go to state 6
    line                           shift and go to state 7
    block                          shift and go to state 8
    expression                     shift and go to state 14
    assignment                     shift and go to state 17
    print                          shift and go to state 18
    return                         shift and go to state 19
    select_element                 shift and go to state 22
    matrix_definition              shift and go to state 25
    matrix_gen_func                shift and go to state 27
    func_name                      shift and go to state 28

state 1

    (0) S' -> program .



state 2

    (1) program -> segment .

    $end            reduce using rule 1 (program -> segment .)


state 3

    (3) segment -> group . segment
    (4) segment -> group .
    (3) segment -> . group segment
    (4) segment -> . group
    (13) group -> . if
    (14) group -> . while
    (15) group -> . for
    (16) group -> . line
    (17) group -> . block
    (11) if -> . IF ( logical_expression ) group
    (12) if -> . IF ( logical_expression ) group ELSE group
    (10) while -> . WHILE ( logical_expression ) group
    (8) for -> . FOR ID = range group
    (5) line -> . expression ;
    (6) line -> . ;
    (7) block -> . { segment }
    (49) expression -> . assignment
    (50) expression -> . print
    (51) expression -> . return
    (52) expression -> . BREAK
    (53) expression -> . CONT
    (66) assignment -> . ID assignment_operator arithmetic_expression
    (67) assignment -> . select_element assignment_operator arithmetic_expression
    (68) assignment -> . select_element assignment_operator matrix_row
    (69) print -> . PRINT vector
    (70) return -> . RETURN arithmetic_expression
    (71) return -> . RETURN
    (23) select_element -> . matrix_definition matrix_row
    (24) select_element -> . ID matrix_row
    (25) select_element -> . ( arithmetic_expression ) matrix_row
    (26) matrix_definition -> . [ matrix_definition_inside ]
    (27) matrix_definition -> . matrix_gen_func
    (33) matrix_gen_func -> . func_name ( arithmetic_expression )
    (34) func_name -> . EYE
    (35) func_name -> . ONES
    (36) func_name -> . ZEROS

    $end            reduce using rule 4 (segment -> group .)
    }               reduce using rule 4 (segment -> group .)
    IF              shift and go to state 9
    WHILE           shift and go to state 11
    FOR             shift and go to state 12
    ;               shift and go to state 15
    {               shift and go to state 16
    BREAK           shift and go to state 20
    CONT            shift and go to state 21
    ID              shift and go to state 13
    PRINT           shift and go to state 23
    RETURN          shift and go to state 24
    (               shift and go to state 10
    [               shift and go to state 26
    EYE             shift and go to state 29
    ONES            shift and go to state 30
    ZEROS           shift and go to state 31

    group                          shift and go to state 3
    segment                        shift and go to state 32
    if                             shift and go to state 4
    while                          shift and go to state 5
    for                            shift and go to state 6
    line                           shift and go to state 7
    block                          shift and go to state 8
    expression                     shift and go to state 14
    assignment                     shift and go to state 17
    print                          shift and go to state 18
    return                         shift and go to state 19
    select_element                 shift and go to state 22
    matrix_definition              shift and go to state 25
    matrix_gen_func                shift and go to state 27
    func_name                      shift and go to state 28

state 4

    (13) group -> if .

    IF              reduce using rule 13 (group -> if .)
    WHILE           reduce using rule 13 (group -> if .)
    FOR             reduce using rule 13 (group -> if .)
    ;               reduce using rule 13 (group -> if .)
    {               reduce using rule 13 (group -> if .)
    BREAK           reduce using rule 13 (group -> if .)
    CONT            reduce using rule 13 (group -> if .)
    ID              reduce using rule 13 (group -> if .)
    PRINT           reduce using rule 13 (group -> if .)
    RETURN          reduce using rule 13 (group -> if .)
    (               reduce using rule 13 (group -> if .)
    [               reduce using rule 13 (group -> if .)
    EYE             reduce using rule 13 (group -> if .)
    ONES            reduce using rule 13 (group -> if .)
    ZEROS           reduce using rule 13 (group -> if .)
    $end            reduce using rule 13 (group -> if .)
    }               reduce using rule 13 (group -> if .)
    ELSE            reduce using rule 13 (group -> if .)


state 5

    (14) group -> while .

    IF              reduce using rule 14 (group -> while .)
    WHILE           reduce using rule 14 (group -> while .)
    FOR             reduce using rule 14 (group -> while .)
    ;               reduce using rule 14 (group -> while .)
    {               reduce using rule 14 (group -> while .)
    BREAK           reduce using rule 14 (group -> while .)
    CONT            reduce using rule 14 (group -> while .)
    ID              reduce using rule 14 (group -> while .)
    PRINT           reduce using rule 14 (group -> while .)
    RETURN          reduce using rule 14 (group -> while .)
    (               reduce using rule 14 (group -> while .)
    [               reduce using rule 14 (group -> while .)
    EYE             reduce using rule 14 (group -> while .)
    ONES            reduce using rule 14 (group -> while .)
    ZEROS           reduce using rule 14 (group -> while .)
    $end            reduce using rule 14 (group -> while .)
    }               reduce using rule 14 (group -> while .)
    ELSE            reduce using rule 14 (group -> while .)


state 6

    (15) group -> for .

    IF              reduce using rule 15 (group -> for .)
    WHILE           reduce using rule 15 (group -> for .)
    FOR             reduce using rule 15 (group -> for .)
    ;               reduce using rule 15 (group -> for .)
    {               reduce using rule 15 (group -> for .)
    BREAK           reduce using rule 15 (group -> for .)
    CONT            reduce using rule 15 (group -> for .)
    ID              reduce using rule 15 (group -> for .)
    PRINT           reduce using rule 15 (group -> for .)
    RETURN          reduce using rule 15 (group -> for .)
    (               reduce using rule 15 (group -> for .)
    [               reduce using rule 15 (group -> for .)
    EYE             reduce using rule 15 (group -> for .)
    ONES            reduce using rule 15 (group -> for .)
    ZEROS           reduce using rule 15 (group -> for .)
    $end            reduce using rule 15 (group -> for .)
    }               reduce using rule 15 (group -> for .)
    ELSE            reduce using rule 15 (group -> for .)


state 7

    (16) group -> line .

    IF              reduce using rule 16 (group -> line .)
    WHILE           reduce using rule 16 (group -> line .)
    FOR             reduce using rule 16 (group -> line .)
    ;               reduce using rule 16 (group -> line .)
    {               reduce using rule 16 (group -> line .)
    BREAK           reduce using rule 16 (group -> line .)
    CONT            reduce using rule 16 (group -> line .)
    ID              reduce using rule 16 (group -> line .)
    PRINT           reduce using rule 16 (group -> line .)
    RETURN          reduce using rule 16 (group -> line .)
    (               reduce using rule 16 (group -> line .)
    [               reduce using rule 16 (group -> line .)
    EYE             reduce using rule 16 (group -> line .)
    ONES            reduce using rule 16 (group -> line .)
    ZEROS           reduce using rule 16 (group -> line .)
    $end            reduce using rule 16 (group -> line .)
    }               reduce using rule 16 (group -> line .)
    ELSE            reduce using rule 16 (group -> line .)


state 8

    (17) group -> block .

    IF              reduce using rule 17 (group -> block .)
    WHILE           reduce using rule 17 (group -> block .)
    FOR             reduce using rule 17 (group -> block .)
    ;               reduce using rule 17 (group -> block .)
    {               reduce using rule 17 (group -> block .)
    BREAK           reduce using rule 17 (group -> block .)
    CONT            reduce using rule 17 (group -> block .)
    ID              reduce using rule 17 (group -> block .)
    PRINT           reduce using rule 17 (group -> block .)
    RETURN          reduce using rule 17 (group -> block .)
    (               reduce using rule 17 (group -> block .)
    [               reduce using rule 17 (group -> block .)
    EYE             reduce using rule 17 (group -> block .)
    ONES            reduce using rule 17 (group -> block .)
    ZEROS           reduce using rule 17 (group -> block .)
    $end            reduce using rule 17 (group -> block .)
    }               reduce using rule 17 (group -> block .)
    ELSE            reduce using rule 17 (group -> block .)


state 9

    (11) if -> IF . ( logical_expression ) group
    (12) if -> IF . ( logical_expression ) group ELSE group

    (               shift and go to state 33


state 10

    (25) select_element -> ( . arithmetic_expression ) matrix_row
    (37) arithmetic_expression -> . arithmetic_expression + arithmetic_expression
    (38) arithmetic_expression -> . arithmetic_expression - arithmetic_expression
    (39) arithmetic_expression -> . arithmetic_expression * arithmetic_expression
    (40) arithmetic_expression -> . arithmetic_expression / arithmetic_expression
    (41) arithmetic_expression -> . arithmetic_expression MTX_SUM arithmetic_expression
    (42) arithmetic_expression -> . arithmetic_expression MTX_DIFFERENCE arithmetic_expression
    (43) arithmetic_expression -> . arithmetic_expression MTX_PRODUCT arithmetic_expression
    (44) arithmetic_expression -> . arithmetic_expression MTX_QUOTIENT arithmetic_expression
    (45) arithmetic_expression -> . single_value
    (46) arithmetic_expression -> . arithmetic_expression TRANSPOSE
    (47) arithmetic_expression -> . - arithmetic_expression
    (48) arithmetic_expression -> . ( arithmetic_expression )
    (18) single_value -> . ID
    (19) single_value -> . FLOAT
    (20) single_value -> . INT
    (21) single_value -> . STRING
    (22) single_value -> . matrix_definition
    (26) matrix_definition -> . [ matrix_definition_inside ]
    (27) matrix_definition -> . matrix_gen_func
    (33) matrix_gen_func -> . func_name ( arithmetic_expression )
    (34) func_name -> . EYE
    (35) func_name -> . ONES
    (36) func_name -> . ZEROS

    -               shift and go to state 36
    (               shift and go to state 34
    ID              shift and go to state 38
    FLOAT           shift and go to state 39
    INT             shift and go to state 40
    STRING          shift and go to state 41
    [               shift and go to state 26
    EYE             shift and go to state 29
    ONES            shift and go to state 30
    ZEROS           shift and go to state 31

    arithmetic_expression          shift and go to state 35
    single_value                   shift and go to state 37
    matrix_definition              shift and go to state 42
    matrix_gen_func                shift and go to state 27
    func_name                      shift and go to state 28

state 11

    (10) while -> WHILE . ( logical_expression ) group

    (               shift and go to state 43


state 12

    (8) for -> FOR . ID = range group

    ID              shift and go to state 44


state 13

    (66) assignment -> ID . assignment_operator arithmetic_expression
    (24) select_element -> ID . matrix_row
    (61) assignment_operator -> . =
    (62) assignment_operator -> . ADD
    (63) assignment_operator -> . SUBTRACT
    (64) assignment_operator -> . MULTIPLY
    (65) assignment_operator -> . DIVIDE
    (30) matrix_row -> . [ vector ]

    =               shift and go to state 47
    ADD             shift and go to state 48
    SUBTRACT        shift and go to state 49
    MULTIPLY        shift and go to state 50
    DIVIDE          shift and go to state 51
    [               shift and go to state 52

    assignment_operator            shift and go to state 45
    matrix_row                     shift and go to state 46

state 14

    (5) line -> expression . ;

    ;               shift and go to state 53


state 15

    (6) line -> ; .

    IF              reduce using rule 6 (line -> ; .)
    WHILE           reduce using rule 6 (line -> ; .)
    FOR             reduce using rule 6 (line -> ; .)
    ;               reduce using rule 6 (line -> ; .)
    {               reduce using rule 6 (line -> ; .)
    BREAK           reduce using rule 6 (line -> ; .)
    CONT            reduce using rule 6 (line -> ; .)
    ID              reduce using rule 6 (line -> ; .)
    PRINT           reduce using rule 6 (line -> ; .)
    RETURN          reduce using rule 6 (line -> ; .)
    (               reduce using rule 6 (line -> ; .)
    [               reduce using rule 6 (line -> ; .)
    EYE             reduce using rule 6 (line -> ; .)
    ONES            reduce using rule 6 (line -> ; .)
    ZEROS           reduce using rule 6 (line -> ; .)
    $end            reduce using rule 6 (line -> ; .)
    }               reduce using rule 6 (line -> ; .)
    ELSE            reduce using rule 6 (line -> ; .)


state 16

    (7) block -> { . segment }
    (3) segment -> . group segment
    (4) segment -> . group
    (13) group -> . if
    (14) group -> . while
    (15) group -> . for
    (16) group -> . line
    (17) group -> . block
    (11) if -> . IF ( logical_expression ) group
    (12) if -> . IF ( logical_expression ) group ELSE group
    (10) while -> . WHILE ( logical_expression ) group
    (8) for -> . FOR ID = range group
    (5) line -> . expression ;
    (6) line -> . ;
    (7) block -> . { segment }
    (49) expression -> . assignment
    (50) expression -> . print
    (51) expression -> . return
    (52) expression -> . BREAK
    (53) expression -> . CONT
    (66) assignment -> . ID assignment_operator arithmetic_expression
    (67) assignment -> . select_element assignment_operator arithmetic_expression
    (68) assignment -> . select_element assignment_operator matrix_row
    (69) print -> . PRINT vector
    (70) return -> . RETURN arithmetic_expression
    (71) return -> . RETURN
    (23) select_element -> . matrix_definition matrix_row
    (24) select_element -> . ID matrix_row
    (25) select_element -> . ( arithmetic_expression ) matrix_row
    (26) matrix_definition -> . [ matrix_definition_inside ]
    (27) matrix_definition -> . matrix_gen_func
    (33) matrix_gen_func -> . func_name ( arithmetic_expression )
    (34) func_name -> . EYE
    (35) func_name -> . ONES
    (36) func_name -> . ZEROS

    IF              shift and go to state 9
    WHILE           shift and go to state 11
    FOR             shift and go to state 12
    ;               shift and go to state 15
    {               shift and go to state 16
    BREAK           shift and go to state 20
    CONT            shift and go to state 21
    ID              shift and go to state 13
    PRINT           shift and go to state 23
    RETURN          shift and go to state 24
    (               shift and go to state 10
    [               shift and go to state 26
    EYE             shift and go to state 29
    ONES            shift and go to state 30
    ZEROS           shift and go to state 31

    segment                        shift and go to state 54
    group                          shift and go to state 3
    if                             shift and go to state 4
    while                          shift and go to state 5
    for                            shift and go to state 6
    line                           shift and go to state 7
    block                          shift and go to state 8
    expression                     shift and go to state 14
    assignment                     shift and go to state 17
    print                          shift and go to state 18
    return                         shift and go to state 19
    select_element                 shift and go to state 22
    matrix_definition              shift and go to state 25
    matrix_gen_func                shift and go to state 27
    func_name                      shift and go to state 28

state 17

    (49) expression -> assignment .

    ;               reduce using rule 49 (expression -> assignment .)


state 18

    (50) expression -> print .

    ;               reduce using rule 50 (expression -> print .)


state 19

    (51) expression -> return .

    ;               reduce using rule 51 (expression -> return .)


state 20

    (52) expression -> BREAK .

    ;               reduce using rule 52 (expression -> BREAK .)


state 21

    (53) expression -> CONT .

    ;               reduce using rule 53 (expression -> CONT .)


state 22

    (67) assignment -> select_element . assignment_operator arithmetic_expression
    (68) assignment -> select_element . assignment_operator matrix_row
    (61) assignment_operator -> . =
    (62) assignment_operator -> . ADD
    (63) assignment_operator -> . SUBTRACT
    (64) assignment_operator -> . MULTIPLY
    (65) assignment_operator -> . DIVIDE

    =               shift and go to state 47
    ADD             shift and go to state 48
    SUBTRACT        shift and go to state 49
    MULTIPLY        shift and go to state 50
    DIVIDE          shift and go to state 51

    assignment_operator            shift and go to state 55

state 23

    (69) print -> PRINT . vector
    (31) vector -> . arithmetic_expression , vector
    (32) vector -> . arithmetic_expression
    (37) arithmetic_expression -> . arithmetic_expression + arithmetic_expression
    (38) arithmetic_expression -> . arithmetic_expression - arithmetic_expression
    (39) arithmetic_expression -> . arithmetic_expression * arithmetic_expression
    (40) arithmetic_expression -> . arithmetic_expression / arithmetic_expression
    (41) arithmetic_expression -> . arithmetic_expression MTX_SUM arithmetic_expression
    (42) arithmetic_expression -> . arithmetic_expression MTX_DIFFERENCE arithmetic_expression
    (43) arithmetic_expression -> . arithmetic_expression MTX_PRODUCT arithmetic_expression
    (44) arithmetic_expression -> . arithmetic_expression MTX_QUOTIENT arithmetic_expression
    (45) arithmetic_expression -> . single_value
    (46) arithmetic_expression -> . arithmetic_expression TRANSPOSE
    (47) arithmetic_expression -> . - arithmetic_expression
    (48) arithmetic_expression -> . ( arithmetic_expression )
    (18) single_value -> . ID
    (19) single_value -> . FLOAT
    (20) single_value -> . INT
    (21) single_value -> . STRING
    (22) single_value -> . matrix_definition
    (26) matrix_definition -> . [ matrix_definition_inside ]
    (27) matrix_definition -> . matrix_gen_func
    (33) matrix_gen_func -> . func_name ( arithmetic_expression )
    (34) func_name -> . EYE
    (35) func_name -> . ONES
    (36) func_name -> . ZEROS

    -               shift and go to state 36
    (               shift and go to state 34
    ID              shift and go to state 38
    FLOAT           shift and go to state 39
    INT             shift and go to state 40
    STRING          shift and go to state 41
    [               shift and go to state 26
    EYE             shift and go to state 29
    ONES            shift and go to state 30
    ZEROS           shift and go to state 31

    vector                         shift and go to state 56
    arithmetic_expression          shift and go to state 57
    single_value                   shift and go to state 37
    matrix_definition              shift and go to state 42
    matrix_gen_func                shift and go to state 27
    func_name                      shift and go to state 28

state 24
